wxc/include/ewxw/wxc_glue.h

/* wxPaintEvent */
TClassDefExtend(wxPaintEvent,wxEvent)

/* wxPalette */
TClassDefExtend(wxPalette,wxGDIObject)
void       wxPalette_Assign( TSelf(wxPalette) _obj, TClass(wxPalette) palette );
TClass(wxPalette) wxPalette_CreateDefault(  );
TClass(wxPalette) wxPalette_CreateRGB( int n, void* red, void* green, void* blue );
void       wxPalette_Delete( TSelf(wxPalette) _obj );
int        wxPalette_GetPixel( TSelf(wxPalette) _obj, TColorRGB(red,green,blue) );
TBoolInt   wxPalette_GetRGB( TSelf(wxPalette) _obj, int pixel, void* red, void* green, void* blue );
TBool      wxPalette_IsEqual( TSelf(wxPalette) _obj, TClass(wxPalette) palette );
TBool      wxPalette_Ok( TSelf(wxPalette) _obj );